# pipex

./: CMakeLists.txt  Makefile  _bonus.h  _bonusCheckHereDoc.c  _bonusCheckHereDock.c  _bonusGetCommandsNum.c  _bonusGetStdin.c  _bonusGetTmpFile.c  _bonusMain.c  _bonusParseHereDoc.c  _bonusParseLastRedirect.c  _bonusParsePipesOnly.c  _bonus_closeAllFds.c  _bonus_closeLazyDescs.c  _bonus_countArgs.c  _bonus_parseCmd.c  _bonus_parseMiddleCommands.c  a.out  bonus.h  bonusCheckHereDoc.c  bonusClean.c  bonusFirstCommand.c  bonusGetCommandsNum.c  bonusGetStdin.c  bonusGetTmpFile.c  bonusLastCommand.c  bonusMain.c  bonusParseCmd.c  bonusParseHereDoc.c  bonusParseLastRedirect.c  bonusParseMiddleCommands.c  bonusParsePipesOnly.c  bonus_pipex  checkExecArr.c  checkFileFd.c  closeAllFds.c  execArrSplit.c  execute.c  findCommand.c  findPath.c  (+27 more)
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
libft/: Makefile  bonus.c  bonus.h  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  (+8 more)
